# fluidity

./: .gitignore  .nfs0000000005ee007a000094d9  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md
cmake/: fluidity_cmake.cmake
include/fluidity/algorithm/: .fill.hpp.swp  .unrolled_for.hpp.swp  accumulate.hpp  algorithm.hpp  apply.hpp  fill.cuh  fill.hpp  fold.hpp  for_each.cuh  for_each.hpp  hash.hpp  if_constexpr.hpp  max_element.hpp  min_element.hpp  reduce.cuh  reduce.hpp  small_sort.hpp  unrolled_for.hpp  unrolled_for_impl.hpp
include/fluidity/boundary/: boundary_loading.hpp  boundary_props.hpp
include/fluidity/container/: .nfs000000000784000a0000172c  .nfs000000000784000e00001836  .nfs00000000078401330000168e  .nfs00000000078403960000161b  .nfs0000000007840ad80000161a  .nfs0000000007840ae30000168d  array.hpp  array_view.hpp  base_tensor.hpp  basic_tuple.hpp  device_tensor.hpp  device_tensor_1d.hpp  device_tensor_nd.hpp  host_tensor.hpp  host_tensor_1d.hpp  host_tensor_nd.hpp  layout.hpp  number.hpp  storage_traits.hpp  strided_base_tensor.hpp  tensor_fwrd.hpp  tuple.hpp  vec.hpp  vec3.hpp
include/fluidity/dimension/: .thread_index.hpp.swp  dimension.hpp  dimension_info.hpp  thread_index.hpp  thread_index_detail.hpp
include/fluidity/execution/: .execution_policy.hpp.swo  .nfs0000000007840ac4000018d3  .nfs0000000007840ad0000011fb  execution_policy.hpp
include/fluidity/flux_method/: .flux_hllc.hpp.swp  flux_force.hpp  flux_hllc.hpp  flux_lax_friedrichs.hpp  flux_methods.hpp  flux_richtmyer.hpp
include/fluidity/geometry/: .nfs000000000796016f0000183a  .nfs000000000796017100001831  .nfs000000000796029c00001838  box.hpp  position.hpp  rectangle.hpp  sphere.hpp  triangle.hpp
include/fluidity/ghost_fluid/: .ghost_fluid_extrapolator.hpp.swp  .riemann_ghost_fluid.hpp.swp  extrapolate_ghost_cells.hpp  ghost_fluid_extrapolator.hpp  load_ghost_cells.hpp  riemann_ghost_fluid.hpp  simple_ghost_fluid.hpp
include/fluidity/io/: data_writer.hpp
include/fluidity/iterator/: .multidim_iterator.hpp.swn  .multidim_iterator_fwd.hpp.swo  .nfs0000000007840acd000010af  .nfs0000000007840ad1000010ad  .nfs0000000007840ad4000010ae  iterator_traits.hpp  multidim_iterator.hpp  multidim_iterator_fwd.hpp  range.hpp  strided_iterator.hpp  tensor_iterator.hpp
include/fluidity/levelset/: .first_order_evolution.hpp.swp  .levelset_evolution.hpp.swp  .velocity_initialization.hpp.swp  first_order_evolution.hpp  levelset.hpp  levelset_evolution.hpp  levelset_projection.hpp  levelset_reinitialization.hpp  levelset_sign_correction.hpp  velocity_initialization.hpp
include/fluidity/limiting/: limiter.hpp  limiter_traits.hpp  limiters.hpp  limiting.hpp  limiting_impl.hpp  linear_limiter.hpp  superbee_limiter.hpp  superbee_limiter_unsplit.hpp  van_leer_limiter.hpp  van_leer_limiter_unsplit.hpp  void_limiter.hpp
include/fluidity/material/: combine_materials.hpp  eos.hpp  eos_traits.hpp  ideal_gas.hpp  material.hpp  material_iterator.hpp  material_traits.hpp  materials.hpp  stiff_fluid.hpp
include/fluidity/math/: .interp.hpp.swp  .nfs0000000007840aef0000187c  .quadratic.hpp.swp  interp.hpp  math.hpp  quadratic.hpp
include/fluidity/reconstruction/: basic_reconstructor.hpp  muscl_reconstructor.hpp  muscl_reconstructor_unsplit.hpp  muscl_reconstrutor.hpp  reconstructor.hpp  reconstructor_traits.hpp  reconstructors.hpp  riemann_input.hpp
include/fluidity/scheme/: .evolve.hpp.swp  evolve.hpp  evolver.hpp  scheme.hpp  stencil.hpp  upwind.hpp
include/fluidity/setting/: configure.hpp  data_option.hpp  dimension_option.hpp  execution_option.hpp  flux_method_option.hpp  limit_form_option.hpp  limiter_option.hpp  material_option.hpp  option.hpp  option_builder.hpp  option_holder.hpp  option_manager.hpp  option_tuple.hpp  reconstruction_option.hpp  setting.hpp  settings.hpp  simulator_parameter.hpp  solve_option.hpp
include/fluidity/simulator/: .multimaterial_simulation_data.hpp.swp  .multimaterial_simulator.hpp.swp  .multimaterial_traits.hpp.swp  domain.hpp  generic_simulator.hpp  multimaterial_simulation_data.hpp  multimaterial_simulator.hpp  (+11 more)
scripts/: debug_viewer.py  plot_1d.py  plot_1d_exact.py  plot_2d.py
src/: CMakeLists.txt
src/fluidity/algorithm/: reduce.cu
src/fluidity/dimension/: thread_index.cu
testing/: 2d_shock_bubble_16x_10y_005r_split_force_van_leer
tests/: .nfs0000000005f0063d000094da  .nfs0000000005f007eb0000003d  CMakeLists.txt  algorithm_tests_device.cu  algorithm_tests_host.cpp  container_tests_device.cu  container_tests_host.cpp  container_tests_host.cu  cuda_test.cu  dimension_tests_host.cpp  iterator_tests_host.cpp  levelset_tests.cu  reconstruction_tests.cpp  setting_tests.cpp  simulator_tests.cpp  simulator_tests.cu  simulator_tests.hpp  solver_tests_host.cpp  state_tests_host.cpp  toro_1d_case_1_validation.cu  toro_1d_case_2_validation.cu  toro_1d_case_3_validation.cu  toro_1d_case_4_validation.cu  toro_1d_case_5_validation.cu
validation/: .1d_mm_toro_case_1_validation.cu.swp  .2d_eikonal_f_1.cu.swn  .nfs000000000783059e0000183c  .nfs00000000078307d200001817  .nfs000000000783086f00001771  .nfs00000000078308a600000c65  .nfs00000000078308a7000011fc  .nfs00000000078308e900001772  1d_mm_fedkiw_test_1_validation.cu  1d_mm_shock_tube_air_helium.cu  1d_mm_shock_tube_gas_water.cu  1d_mm_toro_case_1.cu  1d_mm_toro_case_1_validation.cu  1d_mm_toro_case_4_validation.cu  1d_toro_case_1_validation.cu  1d_toro_case_2_validation.cu  1d_toro_case_3_validation.cu  1d_toro_case_4_validation.cu  1d_toro_case_5_validation.cu  2d_eikonal_f_1.cu  2d_eikonal_f_1_box.cu  2d_eikonal_f_1_multi_source.cu  2d_eikonal_f_1_rect.cu  2d_eikonal_f_1_sphere.cu  2d_eikonal_f_1_triangle.cu  2d_liska_case_12_validation.cu  2d_liska_case_15_validation.cu  2d_liska_case_4_validation.cu  2d_liska_case_6_validation.cu  2d_mm_spherical_riemann.cu  2d_riemann_liska_case_4_validation.cu  2d_shock_bubble_validation.cu  2d_shock_bubble_validation_new.cu  2d_shock_setting.txt  2d_shock_settings_new.txt  CMakeLists.txt  toro_1d_case_1_validation.cu  toro_1d_case_3_validation.cu  toro_1d_case_4_validation.cu
(+111 files in other folders)
